--- a/Website/index.html
+++ b/Website/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="stylesheet.css">
-<h1> HTML Coding Crash Course </h1>
-<h2> Hey there! Have you ever wanted to learn how to make websites using HTML and CSS code?
+  <head> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true">
+  </head>
+
+  <link rel="stylesheet" href="stylesheet.css">
+  <body>
+    <h1> HTML Coding Crash Course </h1>
+
+    <h2> Hey there! Have you ever wanted to learn how to make websites using HTML and CSS code?
      Well, you have come to the right place. This website would help you start programming
      in HTML and CSS by giving you a step by step guide which is easy to understand and
      follow! In order to start your website programming journey, click on one of the links below:
-</h2>
-<div style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: -1;" >
-<video id="video" style="width:100%; height:100%" autoplay loop muted>
-  <source src="https://st4.depositphotos.com/18218294/28883/v/600/depositphotos_288832128-stock-video-code-2-4-scrolling-html.mp4" type="video/mp4">
-</video>
-  </div>
-<body>
-</body>
+    </h2>
+    <div style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: -1;" >
+      <video id="video" style="width:100%; height:100%" autoplay loop muted>
+        <source src="https://st4.depositphotos.com/18218294/28883/v/600/depositphotos_288832128-stock-video-code-2-4-scrolling-html.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <div>
+      <button> Step 1: Coding the Content of your Website </button>
+      
+  </body>
+
 </html>
