Trying to fix the sizzzeeee

--- a/Website/index.html
+++ b/Website/index.html
@@ -20,9 +20,9 @@
       </video>
     </div>
 
-    <div>
+    <div class="buttons">
       <button> Step 1: Coding the Content of your Website </button>
-      
+
   </body>
 
 </html>
