--- a/Website/index.html
+++ b/Website/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
     <title> HTML Crash Course </title>
+    <link rel="shortcut icon" href="your_image_path_and_name.ico" />
   </head>
 
   <link rel="stylesheet" href="stylesheet.css">
