--- a/Website/index.html
+++ b/Website/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="buttons">
-      <button> Step 1: Coding the Content of your Website </button>
+      <button class="Step1_button"> Step 1: Coding the Content of your Website </button>
 
   </body>
 
