making the coe organised

--- a/Website/index.html
+++ b/Website/index.html
@@ -25,6 +25,8 @@
     <div class="buttons">
       <button class="Step1_button"> Step 1: Coding the Content of your Website </button>
 
+    </div>
+    
   </body>
 
 </html>
