making buttons better

--- a/Website/index.html
+++ b/Website/index.html
@@ -22,11 +22,11 @@
       </video>
     </div>
 
-    <div class="buttons">
+    <div>
       <button class="Step1_button"> Step 1: Coding the Content of your Website </button>
 
     </div>
-    
+
   </body>
 
 </html>
