making button animation

--- a/Website/index.html
+++ b/Website/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-      <button> Step 1: Coding the Content of your Website </button>
+      <button style="float: left;"> Step 1: Coding the Content of your Website </button>
 
     </div>
 
