--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
     <h2> Hey there! Have you ever wanted to learn how to make websites using HTML and CSS code?
      Well, you have come to the right place. This website would help you start programming
      in HTML and CSS by giving you a step by step guide which is easy to understand and
-     follow! In order to start your website programming journey, click on one of the links below:
+     follow! In order to start your website programming journey, click on one of the links below: btuh
     </h2>
     <div style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: -1;" >
       <video id="video" style="width:100%; height:100%" autoplay loop muted>
