making the buttons better spaced

--- a/Website/index.html
+++ b/Website/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-      <button style="float: left; padding-left: 5px;"> Step 1: Coding the Content of your Website </button>
+      <button style="float: left; padding-left: 5%;"> Step 1: Coding the Content of your Website </button>
       <button style="floatL: right;"> Step 2: Designing the Website using CSS </button>
     </div>
 
