--- a/Website/index.html
+++ b/Website/index.html
@@ -24,7 +24,7 @@
 
     <div>
       <button style="float: left; padding-right: 5%;"> Step 1: Coding the Content of your Website </button>
-      <button style="floatL: right;"> Step 2: Designing the Website using CSS </button>
+      <button style="float: right;"> Step 2: Designing the Website using CSS </button>
     </div>
 
   </body>
