Finshed all the buttons, just have to make the webpages and have to link them to the buttons

--- a/Website/index.html
+++ b/Website/index.html
@@ -27,6 +27,11 @@
       <button style="float: right;"> Step 2: Designing the Website using CSS </button>
     </div>
 
+    <div>
+      <button style="float: left;"> Step 3: Using git for your project </button>
+      <button style="float: right;"> Tips and tricks! </button>
+    </div>
+    
   </body>
 
 </html>
