--- a/Website/index.html
+++ b/Website/index.html
@@ -23,15 +23,15 @@
     </div>
 
     <div>
-      <button style="float: left;"> Step 1: Coding the Content of your Website </button>
-      <button style="float: right;"> Step 2: Designing the Website using CSS </button>
+      <button style="float: left; padding-bottom: 5%;"> Step 1: Coding the Content of your Website </button>
+      <button style="float: right; padding-bottom: 5%;"> Step 2: Designing the Website using CSS </button>
     </div>
 
     <div>
       <button style="float: left;"> Step 3: Using git for your project </button>
       <button style="float: right;"> Tips and tricks! </button>
     </div>
-    
+
   </body>
 
 </html>
