--- a/Website/index.html
+++ b/Website/index.html
@@ -23,14 +23,31 @@
     </div>
 
     <div>
-      <button style="float: left; padding-bottom: 5%;"> Step 1: Coding the Content of your Website </button>
-      <button style="float: right; padding-bottom: 10%;"> Step 2: Designing the Website using CSS </button>
+      <button class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Coding the Content of your Website </button>
+      <button class="homepage_buttons" style="float: right; padding-bottom: 10%;"> Step 2: Designing the Website using CSS </button>
     </div>
 
     <div>
-      <button style="float: left;"> Step 3: Using git for your project </button>
-      <button style="float: right;"> Tips and tricks! </button>
+      <button class="homepage_buttons" style="float: left;"> Step 3: Using git for your project </button>
+      <button class="homepage_buttons" style="float: right;"> Tips and tricks! </button>
     </div>
+
+    <div class="navbar">
+      <a href="https://veryniceperson.github.io/Website/">Homepage</a>
+      <a href="#news">About</a>
+    <div class="dropdown">
+      <button class="dropbtn">Courses
+        <i class="fa fa-caret-down"></i>
+      </button>
+    <div class="dropdown-content">
+      <a href="#">Step 1: Coding the Content of your Website</a>
+      <a href="#">Step 2: Designing the Website using CSS</a>
+      <a href="#">Step 3: Using git for your project</a>
+      <a href="#">Tips and tricks!</a>
+    </div>
+    </div>
+    </div>
+
 
   </body>
 
