--- a/Website/index.html
+++ b/Website/index.html
@@ -32,14 +32,14 @@
       <button class="homepage_buttons" style="float: right;"> Tips and tricks! </button>
     </div>
 
-    <div class="navbar">
+    <div class="navbar" class="navbar-fixed-top">
       <a href="https://veryniceperson.github.io/Website/">Homepage</a>
       <a href="#news">About</a>
-    <div class="dropdown">
+    <div class="dropdown" class="navbar-fixed-top">
       <button class="dropbtn">Courses
         <i class="fa fa-caret-down"></i>
       </button>
-    <div class="dropdown-content">
+    <div class="dropdown-content" class="navbar-fixed-top">
       <a href="#">Step 1: Coding the Content of your Website</a>
       <a href="#">Step 2: Designing the Website using CSS</a>
       <a href="#">Step 3: Using git for your project</a>
