--- a/Website/index.html
+++ b/Website/index.html
@@ -32,6 +32,7 @@
       <button class="homepage_buttons" style="float: right;"> Tips and tricks! </button>
     </div>
 
+    <div class="navigation">
     <div class="navbar" class="navbar-fixed-top">
       <a href="https://veryniceperson.github.io/Website/">Homepage</a>
       <a href="#news">About</a>
@@ -44,6 +45,7 @@
       <a href="#">Step 2: Designing the Website using CSS</a>
       <a href="#">Step 3: Using git for your project</a>
       <a href="#">Tips and tricks!</a>
+    </div>
     </div>
     </div>
     </div>
