Making new nav bar

--- a/Website/index.html
+++ b/Website/index.html
@@ -32,6 +32,12 @@
       <button class="homepage_buttons" style="float: right;"> Tips and tricks! </button>
     </div>
 
+    <div class="navbar">
+  <a href="https://veryniceperson.github.io/Website/">Homepage</a>
+  <a href="#">About</a>
+  <a href="#contact">Course</a>
+  </div>
+
   </body>
 
 </html>
