edition nav bar

--- a/Website/index.html
+++ b/Website/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <div class="navbar">
-  <a href="https://veryniceperson.github.io/Website/">Homepage</a>
-  <a href="#">About</a>
-  <a href="#contact">Course</a>
+  <button href="https://veryniceperson.github.io/Website/">Homepage</button>
+  <button href="#">About</button>
+  <button href="#contact">Course</button>
   </div>
 
   </body>
