--- a/Website/index.html
+++ b/Website/index.html
@@ -32,6 +32,14 @@
       <button class="homepage_buttons" style="float: right;"> Tips and tricks! </button>
     </div>
 
+    <div class="nav_bar">
+    <ul>
+    <li> Home </li>
+    <li> About </li>
+    <li> Courses </li>
+    </ul>
+    </div> 
+
   </body>
 
 </html>
