trying to make the nav bar

--- a/Website/index.html
+++ b/Website/index.html
@@ -9,9 +9,22 @@
 
   <link rel="stylesheet" href="stylesheet.css">
   <body>
-    <div>
-      <button> Bruh moment </button>
-    </div> 
+
+    <div class="navbar">
+      <a href="https://veryniceperson.github.io/Website/">Homepage</a>
+      <a href="#news">About</a>
+    <div class="dropdown"> Courses
+      <button class="dropbtn">
+        <i class="fa fa-caret-down"></i>
+      </button>
+    <div class="dropdown-content">
+      <a href="#">Step 1: Writing code</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+    </div>
+    </div>
+
     <h1> HTML Coding Crash Course </h1>
 
     <h2> Hey there! Have you ever wanted to learn how to make websites using HTML and CSS code?
@@ -26,7 +39,7 @@
     </div>
 
     <div>
-      <button class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Coding the Content of your Website </button>
+      <button class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Writing the Code for your Website </button>
       <button class="homepage_buttons" style="float: right; padding-bottom: 10%;"> Step 2: Designing the Website using CSS </button>
     </div>
 
