possible fix, trying this version out

--- a/Website/index.html
+++ b/Website/index.html
@@ -15,9 +15,9 @@
       <a href="#news">About</a>
     <div class="dropdown"> Courses
       <button class="dropbtn">
-        <i class="fa fa-caret-down">?</i>
+        <i class="fa fa-caret-down">Courses</i>
       </button>
-    <div class="dropdown-content"> Courses
+    <div class="dropdown-content">
       <a href="#">Step 1: Writing code</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
