making the nav bar better

--- a/Website/index.html
+++ b/Website/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
       <a href="https://veryniceperson.github.io/Website/">Homepage</a>
       <a href="#news">About</a>
-    <div class="dropdown"> Courses
+    <div class="dropdown">
       <button class="dropbtn">
         <i class="fa fa-caret-down">Courses</i>
       </button>
