making the thingy better

--- a/Website/index.html
+++ b/Website/index.html
@@ -14,8 +14,8 @@
       <a href="https://veryniceperson.github.io/Website/">Homepage</a>
       <a href="#news">About</a>
     <div class="dropdown">
-      <button class="dropbtn">
-        <i class="fa fa-caret-down">Courses</i>
+      <button class="dropbtn"> Courses
+        <i class="fa fa-caret-down"></i>
       </button>
     <div class="dropdown-content">
       <a href="#">Step 1: Writing code</a>
