--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="navbar">
-      <a href="https://veryniceperson.github.io/Website/">Homepage</a>
+      <a href="https://veryniceperson.github.io">Homepage</a>
       <a href="#news">About</a>
     <div class="dropdown">
       <button class="dropbtn"> Courses
