Adding more links to the nav bar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       </button>
     <div class="dropdown-content">
       <a href="#">Step 1: Writing code</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Step 2: Designing the Website using CSS</a>
+      <a href="#">Step 3: Using git for your project</a>
+      <a href="#">Tips and tricks!</a>
     </div>
     </div>
     </div>
