Adding a new file and linking it

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
     <div class="dropdown-content">
-      <a href="#">Step 1: Writing code</a>
+      <a href="#Step_1.html">Step 1: Writing code</a>
       <a href="#">Step 2: Designing the Website using CSS</a>
       <a href="#">Step 3: Using git for your project</a>
       <a href="#">Tips and tricks!</a>
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-      <button class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Writing the Code for your Website </button>
+      <button  href="#Step_1.html" class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Writing the Code for your Website </button>
       <button class="homepage_buttons" style="float: right; padding-bottom: 6%;"> Step 2: Designing the Website using CSS </button>
     </div>
 
