Making some spelling changes again

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-      <button onclick=Step_1.html" class="homepage_buttons" style="float: left; padding-bottom: 5%;> Step 1: Writing the Code for your Website </button>
+      <button onclick="Step_1.html" class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Writing the Code for your Website </button>
       <button class="homepage_buttons" style="float: right; padding-bottom: 6%;"> Step 2: Designing the Website using CSS </button>
     </div>
 
