--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
     <div>
       <a href="Step_1.html" class="homepage_buttons" style="float: left; padding-bottom: 5%;"> Step 1: Writing the Code for your Website </a>
-      <a class="homepage_buttons" style="float: right; padding-bottom: 6%;"> Step 2: Designing the Website using CSS </a>
+      <a href= "" class="homepage_buttons" style="float: right; padding-bottom: 6%;"> Step 2: Designing the Website using CSS </a>
     </div>
 
     <div>
-      <a class="homepage_buttons" style="float: left;"> Step 3: Using git for your project </a>
-      <a class="homepage_buttons" style="float: right;"> Tips and tricks! </a>
+      <a href= "" class="homepage_buttons" style="float: left;"> Step 3: Using git for your project </a>
+      <a href= "" class="homepage_buttons" style="float: right;"> Tips and tricks! </a>
     </div>
 
 
