Making the first parts of the webpage

--- a/Step_1.html
+++ b/Step_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background:black;">
   <head> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
@@ -7,3 +7,27 @@
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website%20icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
   </head>
+
+  <body>
+
+    <div class="navbar">
+      <a href="https://veryniceperson.github.io">Homepage</a>
+      <a href="">About</a>
+    <div class="dropdown">
+      <button class="dropbtn"> Courses
+        <i class="fa fa-caret-down"></i>
+      </button>
+    <div class="dropdown-content">
+      <a href="Step_1.html">Step 1: Writing code</a>
+      <a href="#">Step 2: Designing the Website using CSS</a>
+      <a href="#">Step 3: Using git for your project</a>
+      <a href="#">Tips and tricks!</a>
+    </div>
+    </div>
+    </div>
+
+    <h1> Step 1: Writing the HTML code for your website </h1>
+
+    <h2> In order to start creating your website you would need to learn how to code in HTML, because this is
+      the language that browsers use to
+</html>
