Changed background colour and the text colour.
I changed the background from black to the default cream colour and the text colour from white to black. This will improve the aesthetics of the website

--- a/Step_1.html
+++ b/Step_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background:black;">
+<html style="colour:black;">
   <head> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
@@ -28,6 +28,6 @@
 
     <h1> Step 1: Writing the HTML code for your website </h1>
 
-    <h2> In order to start creating your website you would need to learn how to code in HTML, because this is
-      the language that browsers use to
+    <h2> In order to start creating your website you would need to learn how to code in HTML. In this step you
+      will learn basic HTML, in order to write all of the content of your website
 </html>
