--- a/Step_1.html
+++ b/Step_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="color:black;">
+<html style="background-color:black;">
   <head> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
