Added the intro
I have added the introduction for hte webpage

--- a/Step_1.html
+++ b/Step_1.html
@@ -29,5 +29,6 @@
     <h1> Step 1: Writing the HTML code for your website </h1>
 
     <h2> In order to start creating your website you would need to learn how to code in HTML. In this step you
-      will learn basic HTML, in order to write all of the content of your website
+      will learn basic HTML, in order to write all of the content of your website.
+      Let's get started!
 </html>
