Added a line break
I have added a line break in order to make the webpage look better

--- a/Step_1.html
+++ b/Step_1.html
@@ -8,27 +8,31 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
 
-  <body>
+    <body>
 
-    <div class="navbar">
+      <div class="navbar">
       <a href="https://veryniceperson.github.io">Homepage</a>
       <a href="">About</a>
-    <div class="dropdown">
-      <button class="dropbtn"> Courses
-        <i class="fa fa-caret-down"></i>
-      </button>
-    <div class="dropdown-content">
-      <a href="Step_1.html">Step 1: Writing code</a>
-      <a href="#">Step 2: Designing the Website using CSS</a>
-      <a href="#">Step 3: Using git for your project</a>
-      <a href="#">Tips and tricks!</a>
-    </div>
-    </div>
-    </div>
+      <div class="dropdown">
+        <button class="dropbtn"> Courses
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Step_1.html">Step 1: Writing code</a>
+          <a href="#">Step 2: Designing the Website using CSS</a>
+          <a href="#">Step 3: Using git for your project</a>
+          <a href="#">Tips and tricks!</a>
+        </div>
+      </div>
+      </div>
 
-    <h1> Step 1: Writing the HTML code for your website </h1>
+      <h1> Step 1: Writing the HTML code for your website </h1>
 
-    <h2> In order to start creating your website you would need to learn how to code in HTML. In this step you
+      <h2> In order to start creating your website you would need to learn how to code in HTML. In this step you
       will learn basic HTML, in order to write all of the content of your website.
+        <br>
       Let's get started!
+      </h2>
+
+    </body>
 </html>
