Made the lets get started thingy bold
I made it bold so it would stand out

--- a/Step_1.html
+++ b/Step_1.html
@@ -31,7 +31,7 @@
       <h2> In order to start creating your website you would need to learn how to code in HTML. In this step you
       will learn basic HTML, in order to write all of the content of your website.
         <br>
-      Let's get started!
+      <b>Let's get started!<b>
       </h2>
 
     </body>
