--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="navbar">
       <a href="https://veryniceperson.github.io">Homepage</a>
-      <a href="">About</a>
+      <a href="">Sources</a>
     <div class="dropdown">
       <button class="dropbtn"> Courses
         <i class="fa fa-caret-down"></i>
