Forgot to link, so I linked the proper sources

--- a/Sources.html
+++ b/Sources.html
@@ -12,7 +12,7 @@
 
     <div class="navbar">
       <a href="https://veryniceperson.github.io">Homepage</a>
-      <a href="">Sources</a>
+      <a href="Sources.html">Sources</a>
     <div class="dropdown">
       <button class="dropbtn"> Courses
         <i class="fa fa-caret-down"></i>
