Made some spelling fixes
added a dot lol

--- a/Sources.html
+++ b/Sources.html
@@ -27,7 +27,7 @@
     </div>
 
     <h1> These are the sources of somethings I have used for the website. They include
-      images, features and videos </h1>
+      images, features and videos. </h1>
 
     <ul>
       <li> Codecademy. 2020. | Codecademy. [online] Available at: <https://www.codecademy.com/learn> [Accessed 23 July 2020]. </li>
