Made some progress on step 1
Added an image, started the "Parts of HTML code" and made some video improvements

--- a/Step_1.html
+++ b/Step_1.html
@@ -34,5 +34,8 @@
       <b>Let's get started!<b>
       </h2>
 
+      <div class="HTMLcode_parts">
+        <h3> Parts of HTML code </h3>
+        <img src="HTML Anatomy.png" alt="Main parts of HTML code" width="20%" height="auto">
     </body>
 </html>
