--- a/Step_1.html
+++ b/Step_1.html
@@ -35,7 +35,8 @@
       </h2>
 
       <div class="HTMLcode_parts">
-        <h3> Parts of HTML code </h3>
+        <h3 style="margin-right:5%; margin-bottom:2%;"> Parts of HTML code </h3>
         <img src="HTML Anatomy.png" alt="Main parts of HTML code" width="20%" height="auto">
+        <p>
     </body>
 </html>
