Changed the names
I changed the names of the images so that I could link them directly

--- a/Step_1.html
+++ b/Step_1.html
@@ -36,7 +36,7 @@
 
       <div class="HTMLcode_parts">
         <h3 style="margin-right:5%; margin-bottom:2%;"> Parts of HTML code </h3>
-        <img src="HTML Anatomy.png" alt="Main parts of HTML code" width="20%" height="auto">
+        <img src="HTML_Anatomy.png" alt="Main parts of HTML code" width="20%" height="auto">
         <p>
     </body>
 </html>
