--- a/Step_1.html
+++ b/Step_1.html
@@ -35,8 +35,20 @@
       </h2>
 
       <div class="HTMLcode_parts">
-        <h3 style=margin-bottom:3%;"> Parts of HTML code </h3>
+        <h3 style="margin-bottom:3%;"> Parts of HTML code </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/HTML_Anatomy.png?raw=true" alt="Main parts of HTML code" width="40%" height="auto">
-        <p>
+        <p> On the image to the right you would be able to see a diagram that represents
+          the parts of a single element. The <b> element </b> is a part of code in HTML which
+          consists of an HTML tag, the content inside and sometimes some styling.
+          <br>
+          The HTML tag contains the element name and helps classify a piece of content,
+          because without the tag the browser wouldn't know how to handle the content
+          inside the tags. The tag starts with "<" then has the class and then ends
+          with ">".
+          The opening tag is the first HTML tag and is utilised to commence an HTML element.
+          It starts with a "<" has the class and then ends with a ">".
+
+        </p>
+
     </body>
 </html>
