Finished the "Parts of HTML code"
Next ima move on to the HTML hierarchy

--- a/Step_1.html
+++ b/Step_1.html
@@ -45,9 +45,21 @@
           because without the tag the browser wouldn't know how to handle the content
           inside the tags. The tag starts with "<" then has the class and then ends
           with ">".
+          <br>
           The opening tag is the first HTML tag and is utilised to commence an HTML element.
           It starts with a "<" has the class and then ends with a ">".
-
+          <br>
+          The content inside of the the HTML opening and closing tags is the information that you add for the
+          website to contain. It comes in many forms including text, images, videos, audio clips and other
+          types of files.
+          <br>
+          The closing tag is the ending HTML tag in a HTML element. The difference between the opening tag and
+          the closing tag is that the closing tag has a "/" after the "<". The are used to mark the end of an
+          element in a website.
+          <br>
+            <b> After you have read through this and memorised it, we can start learning the code structure (hierarchy)
+              in order to make sure that your website code is organised and easy to edit. </b>
+      </div>
         </p>
 
     </body>
