Added the title for the HTML Hierarchy
Next Ima make the content for this stnky stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -59,8 +59,11 @@
           <br>
             <b> After you have read through this and memorised it, we can start learning the code structure (hierarchy)
               in order to make sure that your website code is organised and easy to edit. </b>
-      </div>
         </p>
+      </div>
+
+      <div class="HTML_hierarchy">
+        <h3 style="margin-bottom:3%;"> HTML Hierarchy <i> (HTML code structuring) </i>
 
     </body>
 </html>
