--- a/Step_1.html
+++ b/Step_1.html
@@ -42,20 +42,28 @@
           consists of an HTML tag, the content inside and sometimes some styling.
           <br>
           <br>
+          <h4> HTML tag </h4>
+          <br>
           The HTML tag contains the element name and helps classify a piece of content,
           because without the tag the browser wouldn't know how to handle the content
           inside the tags. The tag starts with "<" then has the class and then ends
           with ">".
           <br>
           <br>
+          <h4> Opening tag </h4>
+          <br>
           The opening tag is the first HTML tag and is utilised to commence an HTML element.
           It starts with a "<" has the class and then ends with a ">".
           <br>
+          <br>
+          <h4> Content </h4>
           <br>
           The content inside of the the HTML opening and closing tags is the information that you add for the
           website to contain. It comes in many forms including text, images, videos, audio clips and other
           types of files.
           <br>
+          <br>
+          <h4> Closing tag </h4>
           <br>
           The closing tag is the ending HTML tag in a HTML element. The difference between the opening tag and
           the closing tag is that the closing tag has a "/" after the "<". The are used to mark the end of an
