changed some spelling lol

--- a/Step_1.html
+++ b/Step_1.html
@@ -72,6 +72,6 @@
 
       <div class="HTML_hierarchy">
         <h3 style="margin-bottom:3%;"> HTML Hierarchy <i> (HTML code structuring) </i>
-        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/HTML%20Hierarchy.png" alt='HTML Hierarchy exampls' width="100" height="auto">
+        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/HTML%20Hierarchy.png" alt='HTML Hierarchy exampls' width="100%" height="auto">
     </body>
 </html>
