--- a/Sources.html
+++ b/Sources.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
     <title> Sources </title>
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website%20icon.ico" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website_icon.ico" />
   </head>
 
   <link rel="stylesheet" href="stylesheet.css">
