Finished the hierarchy stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -37,7 +37,7 @@
       <div class="HTMLcode_parts">
         <h3 style="margin-bottom:3%;"> Parts of HTML code </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/HTML_Anatomy.png?raw=true" alt="Main parts of HTML code" width="40%" height="auto">
-        <p> On the image to the right you would be able to see a diagram that represents
+        <p> In the image to the right you would be able to see a diagram that represents
           the parts of a single element. The <b> element </b> is a part of code in HTML which
           consists of an HTML tag, the content inside and sometimes some styling.
           <br> </br>
@@ -73,5 +73,9 @@
       <div class="HTML_hierarchy">
         <h3 style="margin-bottom:3%;"> HTML Hierarchy <i> (HTML code structuring) </i>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/HTML%20Hierarchy.png" alt='HTML Hierarchy exampls' width="100%" height="auto">
+        <p> In the image above you would be able to see how HTML hierarchy works. It starts with parent, then goes on
+          with children, siblings, grandchildren and so on. It is important to understand HTML Hierarchy because <thead>
+          decendants of different elements can inherit properties such as text colour and font from their ancestors. 
+          </thead>
     </body>
 </html>
