Finished the hierarchy
next, I'm gonna start doing the getting started thingy

--- a/Step_1.html
+++ b/Step_1.html
@@ -71,11 +71,14 @@
       </div>
 
       <div class="HTML_hierarchy">
-        <h3 style="margin-bottom:3%;"> HTML Hierarchy <i> (HTML code structuring) </i>
+        <h3 style="margin-bottom:3%;"> HTML Hierarchy <i> (HTML code structuring) </i> </h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/HTML%20Hierarchy.png" alt='HTML Hierarchy exampls' width="100%" height="auto">
         <p> In the image above you would be able to see how HTML hierarchy works. It starts with parent, then goes on
-          with children, siblings, grandchildren and so on. It is important to understand HTML Hierarchy because <thead>
-          decendants of different elements can inherit properties such as text colour and font from their ancestors. 
-          </thead>
+          with children, siblings, grandchildren and so on. It is important to understand HTML Hierarchy because the
+          decendants of different elements can inherit properties such as text colour and font from their ancestors.
+          <br> </br>
+          <b> After you have reader throught the short paragraph above, lets get started on your first website! </b>
+        </p>
+      </div>      
     </body>
 </html>
