--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div>
-      <a href= "" class="homepage_buttons" style="float: right;"> Tips and tricks! </a>
+      <a href= "" class="homepage_buttons" style="float: left;"> Tips and tricks! </a>
     </div>
 
 
