addedd some stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -81,7 +81,8 @@
       </div>
 
       <div class="Getting_Started">
-        <h3 style="margin-botton:3%;"
+        <h3 style="margin-botton:3%;"> Getting Started <i> (This section would provide you a starter template) </i> </h3>
+        <img 
 
     </body>
 </html>
