--- a/Step_1.html
+++ b/Step_1.html
@@ -81,12 +81,14 @@
       </div>
 
       <div class="Getting_Started">
-        <h3 style="margin-botton:3%;"> Getting Started <i> (This section would provide you a starter template for your website) </i> </h3>
+        <h3 style="margin-botton:3%;"> Getting Started </h3>
         <img src="">
         <p> Now we are going to start writing some code! So get your keybooard ready and let's get started!
           <br> </br>
           First of all we are going to need a platform on which we would be able to write our code on. You can either use your own, something
           like <a href="https://atom.io"> Atom </a> or <a href="https://visualstudio.microsoft.com"> Visual Studio </a>. But if you are unable
-          to do so, use a <a href=""
+          to do so, use a <a href="https://repl.it/languages/html"> Online HTML and CSS editor </a>.
+          <br> </br>
+          <b> First of all, </b> erase anything that is present in your HTML editor. 
     </body>
 </html>
