--- a/Step_1.html
+++ b/Step_1.html
@@ -76,7 +76,7 @@
           with children, siblings, grandchildren and so on. It is important to understand HTML Hierarchy because the
           decendants of different elements can inherit properties such as text colour and font from their ancestors.
           <br> </br>
-          <b> After you have reader throught the short paragraph above, lets get started on your first website! </b>
+          <b> After you have read throught the short paragraph above, lets get started on your first website! </b>
         </p>
       </div>
 
