--- a/Step_1.html
+++ b/Step_1.html
@@ -82,7 +82,8 @@
 
       <div class="Getting_Started">
         <h3 style="margin-botton:3%;"> Getting Started </h3>
-        <img src="">
+        <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true">
+        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png">
         <p> Now we are going to start writing some code! So get your keybooard ready and let's get started!
           <br> </br>
           First of all we are going to need a platform on which we would be able to write our code on. You can either use your own, something
