adjusted amount of images

--- a/Step_1.html
+++ b/Step_1.html
@@ -83,13 +83,12 @@
       <div class="Getting_Started">
         <h3 style="margin-botton:3%;"> Getting Started </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true">
-    <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png">
         <p> Now we are going to start writing some code! So get your keybooard ready and let's get started!
           <br> </br>
           First of all we are going to need a platform on which we would be able to write our code on. You can either use your own, something
           like <a href="https://atom.io"> Atom</a> or <a href="https://visualstudio.microsoft.com"> Visual Studio</a>. But if you are unable
           to do so, use a <a href="https://repl.it/languages/html"> Online HTML and CSS editor</a>.
-              <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png">
+          <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png" style="margin-top:5%;">
           <br> </br>
           <b> First of all, </b> erase anything that is present in your HTML editor.
     </body>
