--- a/Step_1.html
+++ b/Step_1.html
@@ -90,6 +90,9 @@
           to do so, use a <a href="https://repl.it/languages/html" target="_blank"> Online HTML and CSS editor</a>.
           <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true" width="20%" height="20%">
           <br> </br>
-          <b> First of all, </b> erase anything that is present in your HTML editor.
+          <b> First of all, </b> erase anything that is present in your HTML editor. Then on top of your document write "<!DOCTYPE html>". This will allow the user's browser to
+          know what type of file it is and how to deal with the file. This should be included in all of your html documents.
+          <br>
+          In a new line, press tab and write <pre> &lt;html&gt; </pre>. This would ensure
     </body>
 </html>
