Added some stuff
Added some details

--- a/Step_1.html
+++ b/Step_1.html
@@ -93,6 +93,7 @@
           <b> First of all, </b> erase anything that is present in your HTML editor. Then on top of your document write "<!DOCTYPE html>". This will allow the user's browser to
           know what type of file it is and how to deal with the file. This should be included in all of your html documents.
           <br>
-          In a new line, press tab and write <pre> &lt;html&gt; </pre>. This would ensure
+          In a new line, write <pre> &lt;html&gt; </pre>. This is the parent of all of the element and will contain all of the content in the document, except for
+          <pre> &lt;!DOCTYPE html&gt; </pre>. It is important that you include this tag in all of your html documents.
     </body>
 </html>
