--- a/Step_1.html
+++ b/Step_1.html
@@ -96,6 +96,14 @@
           In a new line, write <pre> &lt;html&gt; </pre>. This is the parent of all of the element and will contain all of the content in the document, except for
           <pre> &lt;!DOCTYPE html&gt; </pre>. It is important that you include this tag in all of your html documents.
           <br>
-          In another line type in <pre> &lt;head&gt;
+          In another line type in <pre> &lt;head&gt; </pre>. This element contains content that is usually not displayed on the webpage itself and contains the metadata of the website. Metadata is stuff like
+          styling, the title of the website that you see on the tab of your browser, the image that is displayed on the browser tab whenever the website is open and the link to the stylesheet of the website
+          <i> (We will get into detail about that in Step 2) </i>.
+          <br>
+          Now, type in <pre> &lt;title&gt; </pre> and <pre> &lt;/title&gt; </pre>. This would allow you to include a title on the tab of a browser for your website. This is optional but, if you don't include a title, the website's
+          name on the tab would appear as Untitled. (You should include the title text in between the opening and closing tag).
+          <br>
+          If you want to include a website icon, you can include this code after the <pre> &lt;title&gt; </pre>: <pre> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </pre>
+          This is
     </body>
 </html>
