--- a/Step_1.html
+++ b/Step_1.html
@@ -90,20 +90,20 @@
           to do so, use a <a href="https://repl.it/languages/html" target="_blank"> Online HTML and CSS editor</a>.
           <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true" width="20%" height="20%">
           <br> </br>
-          <b> First of all, </b> erase anything that is present in your HTML editor. Then on top of your document write <pre> &lt;!DOCTYPE html&gt; </pre>. This will allow the user's browser to
+          <b> First of all, </b> erase anything that is present in your HTML editor. Then on top of your document write <code> &lt;!DOCTYPE html&gt; </code>. This will allow the user's browser to
           know what type of file it is and how to deal with the file. This should be included in all of your html documents.
           <br>
-          In a new line, write <pre> &lt;html&gt; </pre>. This is the parent of all of the element and will contain all of the content in the document, except for
-          <pre> &lt;!DOCTYPE html&gt; </pre>. It is important that you include this tag in all of your html documents.
+          In a new line, write <code> &lt;html&gt; </code>. This is the parent of all of the element and will contain all of the content in the document, except for
+          <code> &lt;!DOCTYPE html&gt; </code>. It is important that you include this tag in all of your html documents.
           <br>
-          In another line type in <pre> &lt;head&gt; </pre>. This element contains content that is usually not displayed on the webpage itself and contains the metadata of the website. Metadata is stuff like
+          In another line type in <code> &lt;head&gt; </code>. This element contains content that is usually not displayed on the webpage itself and contains the metadata of the website. Metadata is stuff like
           styling, the title of the website that you see on the tab of your browser, the image that is displayed on the browser tab whenever the website is open and the link to the stylesheet of the website
           <i> (We will get into detail about that in Step 2) </i>.
           <br>
-          Now, type in <pre> &lt;title&gt; </pre> and <pre> &lt;/title&gt; </pre>. This would allow you to include a title on the tab of a browser for your website. This is optional but, if you don't include a title, the website's
+          Now, type in <code> &lt;title&gt; </code> and <code> &lt;/title&gt; </code>. This would allow you to include a title on the tab of a browser for your website. This is optional but, if you don't include a title, the website's
           name on the tab would appear as Untitled. (You should include the title text in between the opening and closing tag).
           <br>
-          If you want to include a website icon, you can include this code after the <pre> &lt;title&gt; </pre>: <pre> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </pre>
+          If you want to include a website icon, you can include this code after the <code> &lt;title&gt; </code>: <code> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </code>
           This is
     </body>
 </html>
