Removed unecessary dot

--- a/Step_1.html
+++ b/Step_1.html
@@ -120,10 +120,9 @@
           <i> (We will get into detail about that in Step 2) </i>.
           <br>
           Now, type in <code> &lt;title&gt; </code> and <code> &lt;/title&gt; </code>. This would allow you to include a title on the tab of a browser for your website. This is optional but, if you don't include a title, the website's
-          name on the tab would appear as Untitled. (You should include the title text in between the opening and closing tag).
+          name on the tab would appear as Untitled (You should include the title text in between the opening and closing tag).
           <br>
           If you want to include a website icon, you can include this code after the <code> &lt;title&gt; </code>: <code> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </code>
           This is optional, but highly recommended because the website icon on the tab of the browser adds a nice touch and makes your website's tab more distinguishable compared to other tabs.
-          Another important thing to remember is that the images that you use for the icon are supposed to be in .ico format,
     </body>
 </html>
