Adding more content

--- a/Step_1.html
+++ b/Step_1.html
@@ -124,5 +124,14 @@
           <br>
           If you want to include a website icon, you can include this code after the <code> &lt;title&gt; </code>: <code> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </code>
           This is optional, but highly recommended because the website icon on the tab of the browser adds a nice touch and makes your website's tab more distinguishable compared to other tabs.
+          <br>
+          Last, but not least, we have to include a link to our stylesheet. The stylesheet is where you would usually write code to give your different properties such as different fonts, although you could write it in the html document itself. This is optional,
+          but it is considered necessary for all websites, because without styling your website would be plain and ugly. On a new line insert <code> &lt;link rel="stylesheet" href="insert link here"&gt; </code>. Now you are free to enter which ever stylesheet
+          you would want to use.
+          <br></br>
+          Well done on coming this far!!! Now all you have to do is close the head tag (if you don't remember how to do this you just write <code> &lt;/head&gt; </code> on a line below the second link element) and do 2 things to finish your started template.
+          
+
+        </p>
     </body>
 </html>
