Added the headings part

--- a/Step_1.html
+++ b/Step_1.html
@@ -121,5 +121,10 @@
         </p>
       </div>
 
+      <div class="Headings">
+        <h3 style="margin-bottom:3%;"> Headings </h3>
+        
+
+
     </body>
 </html>
