--- a/Step_1.html
+++ b/Step_1.html
@@ -123,7 +123,9 @@
 
       <div class="Headings">
         <h3 style="margin-bottom:3%;"> Headings </h3>
-        
+        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Headings%20Image.png" width="25%" height="25%">
+        <p> 
+
 
 
     </body>
