--- a/Step_1.html
+++ b/Step_1.html
@@ -124,7 +124,8 @@
       <div class="Headings">
         <h3 style="margin-bottom:3%;"> Headings </h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Headings%20Image.png" width="25%" height="25%">
-        <p> 
+        <p><b> In this section we will learn how to use headings in your website. Headings are useful for making your website more organised, by including things such as headings and sub-headings for sections of your website. Headings make sure that your viewers know what the
+          content would be about. 
 
 
 
