--- a/Step_1.html
+++ b/Step_1.html
@@ -117,7 +117,7 @@
           <br> </br>
           Finally you would need to close off your html tag. Try to do this yourself, but if you are stuck just paste <code> &lt;/html&gt; </code> after the closing body tag.
           <br> </br>
-          <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them </b>
+          <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them. </b>
         </p>
       </div>
 
@@ -125,7 +125,7 @@
         <h3 style="margin-bottom:3%;"> Headings </h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Headings%20Image.png" width="25%" height="25%">
         <p><b> In this section we will learn how to use headings in your website. Headings are useful for making your website more organised, by including things such as headings and sub-headings for sections of your website. Headings make sure that your viewers know what the
-          content would be about. 
+          content would be about.
 
 
 
