--- a/Step_1.html
+++ b/Step_1.html
@@ -129,7 +129,8 @@
           <br></br>
           <b> How do you use headers? </b>
           <br></br>
-          In total there are 6 header tags and the higher the number
+          In total there are 6 header tags and the higher the number, the smaller the font of the header by default. For example, text with the h1 tags are going to have a larger font compared to text with h6 tags. You would usually use h1 for main headers and the rest of
+          the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&ht;</code>. In this course 
 
 
 
