Added some subheadings

--- a/Step_1.html
+++ b/Step_1.html
@@ -90,7 +90,9 @@
           to do so, use a <a href="https://repl.it/languages/html" target="_blank"> Online HTML and CSS editor</a>.
           <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true" width="20%" height="20%">
           <br> </br>
-          <b> First of all, </b> erase anything that is present in your HTML editor. Then on top of your document write <code> &lt;!DOCTYPE html&gt; </code>. This will allow the user's browser to
+          <b> Starting off on a black page </b>
+          <br>
+          Now, erase anything that is present in your HTML editor. Then on top of your document write <code> &lt;!DOCTYPE html&gt; </code>. This will allow the user's browser to
           know what type of file it is and how to deal with the file. This should be included in all of your html documents.
           <br> </br>
           In a new line, write <code> &lt;html&gt; </code>. This is the parent of all of the element and will contain all of the content in the document, except for
@@ -131,7 +133,7 @@
           <br></br>
           In total there are 6 header tags and the higher the number, the smaller the font of the header by default. For example, text with the h1 tags are going to have a larger font compared to text with h6 tags. You would usually use h1 for main headers and the rest of
           the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&gt;</code>. In this course we will be practising by writing about the history
-          of the iPad, but you can write about something else if you like. 
+          of the iPad, but you can write about something else if you like.
 
 
 
