--- a/Step_1.html
+++ b/Step_1.html
@@ -95,25 +95,35 @@
           Now, erase anything that is present in your HTML editor. Then on top of your document write <code> &lt;!DOCTYPE html&gt; </code>. This will allow the user's browser to
           know what type of file it is and how to deal with the file. This should be included in all of your html documents.
           <br> </br>
+          <b> The HTML declaration </b>
+          <br>
           In a new line, write <code> &lt;html&gt; </code>. This is the parent of all of the element and will contain all of the content in the document, except for
-          <code> &lt;!DOCTYPE html&gt; </code>. It is important that you include this tag in all of your html documents.
+          <code> &lt;!DOCTYPE html&gt; </code>. It is important that you include this declaration in all of your html documents.
           <br> </br>
+          <b> The <code> &lt;head&gt; </code> tag </b>
+          <br>
           In another line type in <code> &lt;head&gt; </code>. This element contains content that is usually not displayed on the webpage itself and contains the metadata of the website. Metadata is stuff like
           styling, the title of the website that you see on the tab of your browser, the image that is displayed on the browser tab whenever the website is open and the link to the stylesheet of the website
           <i> (We will get into detail about that in Step 2) </i>.
           <br> </br>
+          <b> The title on the tab of a browser </b>
+          <br>
           Now, type in <code> &lt;title&gt; </code> and <code> &lt;/title&gt; </code>. This would allow you to include a title on the tab of a browser for your website. This is optional but, if you don't include a title, the website's
           name on the tab would appear as Untitled (You should include the title text in between the opening and closing tag).
           <br> </br>
           If you want to include a website icon, you can include this code after the <code> &lt;title&gt; </code>: <code> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </code>
           This is optional, but highly recommended because the website icon on the tab of the browser adds a nice touch and makes your website's tab more distinguishable compared to other tabs.
           <br> </br>
+          <b> Stylesheet link </b>
+          <br>
           Last, but not least in this list, we have to include a link to our stylesheet. The stylesheet is where you would usually write code to give your different properties such as different fonts, although you could write it in the html document itself. This is optional,
           but it is considered necessary for all websites, because without styling your website would be plain and ugly. On a new line insert <code> &lt;link rel="stylesheet" href="insert link here"&gt; </code>. Now you are free to enter which ever stylesheet
           you would want to use.
           <br></br>
           Well done on coming this far!!! Now all you have to do is close the head tag (if you don't remember how to do this you just write <code> &lt;/head&gt; </code> on a line below the second link element) and do 2 things to finish your started template.
           <br> </br>
+          <b> The body element </b>
+          <br>
           Next we have to include the body elememt. The body element is what will contain all of the content of the website, such as text, images, videos and other types of content. First try to write the code for the tags by yourself and remember, the tag is called body.
           If you are stuck, use <code> &lt;body&gt; </code> for the opening tag and <code> &lt;/body&gt; </code> for the closing tag. In between of those two, you will include all of the visible content of the website.
           <br> </br>
