--- a/Step_1.html
+++ b/Step_1.html
@@ -143,7 +143,8 @@
           <br></br>
           In total there are 6 header tags and the higher the number, the smaller the font of the header by default. For example, text with the h1 tags are going to have a larger font compared to text with h6 tags. You would usually use h1 for main headers and the rest of
           the headings for sub headings. In a new line after the body opening tag, include an opening h1 tag. You should be able to do this by now, but if you don't, just copy and paste <code>&lt;h1&gt;</code>. In this course we will be practising by writing about the history
-          of the iPad, but you can write about something else if you like.
+          of the iPad, but you can write about something else if you like. Then include a suitable title for your website. It can be something like "The history of the iPad". Now close off the tag and lets take a look on the website you have created. Just navigate on to the HTML file
+          right click on it and open the file with your internet browser. 
 
 
 
